fixed logo spacing

--- a/src/Pages/About/About.css
+++ b/src/Pages/About/About.css
@@ -26,3 +26,26 @@
     /* cursor: scroll; */
     margin:auto
   }
+
+  .about-logo {
+    display: flex;
+    justify-content: space-evenly;
+    /* height: 30px */
+    /* margin-left: 10%;
+    margin-right: 10% */
+  }
+
+  .github-logo {
+    
+    /* height: 30px;
+    width: 30px; */
+    margin-left: 40%;
+    color: black
+  }
+
+  .linkedin-logo {
+    /* height: 10px;
+    width: 10px; */
+    margin-right: 40%;
+    color: black
+  }
