--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -68,7 +68,7 @@ h3 {
   justify-content: center;
   margin-top: 30px;
   margin-bottom: 20px;
-  gap: 20px;
+  gap: 10px;
 }
 
 .logo a {
